[ADD] : ajout de la sequence matricule DW

--- a/extra-addons/l10n_ma_hr_digitalworks/views/hr_view.xml
+++ b/extra-addons/l10n_ma_hr_digitalworks/views/hr_view.xml
@@ -18,7 +18,7 @@
                     <div class="oe_title">
                         <label for="matricule_dw" class="oe_edit_only"/>
                         <h1>
-                            <field name="matricule_dw" placeholder="Matricule DW"/>
+                            <field name="matricule_dw" readonly="True"/>
                         </h1>
                     </div>
                     <div class="oe_title">
