[FIX] : Salaire heures de production arrondi

--- a/extra-addons/l10n_ma_hr_digitalworks/views/l10n_ma_hr_digitalworks_view.xml
+++ b/extra-addons/l10n_ma_hr_digitalworks/views/l10n_ma_hr_digitalworks_view.xml
@@ -22,6 +22,7 @@
                     <field name="salaire_base"/>
                     <field name="indimnite_panier"/>
                     <field name="indimnite_transport"/>
+                    <field name="contract_wage_191"/>
                 </xpath>
              </data>
 
