--- a/extra-addons/l10n_ma_hr_digitalworks/views/report_payslip.xml
+++ b/extra-addons/l10n_ma_hr_digitalworks/views/report_payslip.xml
@@ -7,7 +7,7 @@
             <template id="report_payslip_inherited" inherit_id="hr_payroll.report_payslip">
 
                 <xpath expr="//table[@class='table table-condensed table-bordered']//tr[3]//td[3]" position="replace">
-                            <td><strong>No Matricule DW</strong></td>
+                            <td><strong>N° Matricule DW</strong></td>
                 </xpath>
                 <xpath expr="//table[@class='table table-condensed table-bordered']//tr[3]//td[4]" position="replace">
                             <td><span t-field="o.employee_id.matricule_dw"/></td>
