--- a/extra-addons/l10n_ma_hr_digitalworks/views/hr_view.xml
+++ b/extra-addons/l10n_ma_hr_digitalworks/views/hr_view.xml
@@ -249,14 +249,9 @@
             <field name="model">hr.employee.dw.category</field>
             <field name="arch" type="xml">
                 <form string="Catégorie Employé">
-                    <sheet>
-                        <div class="oe_title">
-                            <label for="name" class="oe_edit_only"/>
-                            <h1>
-                                <field name="name"/>
-                            </h1>
-                        </div>
-                    </sheet>
+                    <group col="4">
+                        <field colspan="4" name="name"/>
+                    </group>
                 </form>
             </field>
         </record>
