[FIX] : company_id in employee form view

--- a/extra-addons/l10n_ma_hr_digitalworks/views/hr_view.xml
+++ b/extra-addons/l10n_ma_hr_digitalworks/views/hr_view.xml
@@ -38,7 +38,7 @@
                 </xpath>
 		
                 <xpath expr="//field[@name='department_id']" position="before">
-                            <field name="company_id"/>
+                            <field name="dw_company_id"/>
                 </xpath>
 
                 <xpath expr="//field[@name='address_home_id']" position="after">
