[FIX] : change employee kanban view

--- a/extra-addons/l10n_ma_hr_digitalworks/views/hr_view.xml
+++ b/extra-addons/l10n_ma_hr_digitalworks/views/hr_view.xml
@@ -289,7 +289,7 @@
                 <field name="model">hr.employee</field>
                 <field name="arch" type="xml">
                         <xpath expr="//field[@name='name']" position="after">
-                            <li><field name="matricule_dw"/></li>
+                            <ul><li><field name="matricule_dw"/></li></ul>
                         </xpath>
                 </field>
         </record>
